# televit1.0

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: train.yaml
configs/callbacks/: default.yaml  default_time_cond.yaml  learning_rate_monitor.yaml
configs/data/: seasfire_local_global_generic.yaml  seasfire_local_global_generic_bin_regression.yaml  seasfire_local_global_generic_bin_regression_unet.yaml  seasfire_local_global_generic_regression.yaml  seasfire_local_global_generic_regression_unet.yaml  seasfire_local_global_generic_time_cond.yaml  seasfire_local_global_generic_unet.yaml
configs/experiment/: televit_nots.yaml  unet_nots.yaml  unet_regression_weighted.yaml  vit_global.yaml  vit_global_generic.yaml  vit_global_generic_bin_regression.yaml  vit_global_generic_regression.yaml  vit_global_generic_regression_weighted.yaml
configs/logger/: wandb.yaml
configs/model/: seasfire_unet_bin_regression.yaml  seasfire_unet_regression.yaml  seasfire_vit_global_generic.yaml  seasfire_vit_global_generic_bin_regression.yaml  seasfire_vit_global_generic_regression.yaml  seasfire_vit_global_generic_time_cond.yaml
configs/trainer/: default.yaml
notebooks/: create_coarsened_cube.ipynb
scripts/: inference_televit_attentions.py  televit_all_inputs.sh  unet_experiments.sh
src/: train.py
src/callbacks/: wandb_callbacks.py
src/data/: seasfire_local_global_generic.py  seasfire_local_global_generic_time_cond.py
src/models/: seasfire_unet_bin_regression.py  (+6 more)
stats/: global_mean_std.nc  local_mean_std.nc  oci_mean_std.nc
(+5 files in other folders)
