[project]
name = "televit1.0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bottleneck==1.4.2",
    "dask>=2025.11.0",
    "einops==0.8.1",
    "fsspec==2023.10.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core==1.3.2",
    "lightning==2.5.1",
    "matplotlib>=3.10.7",
    "numcodecs==0.12.1",
    "pandas==2.2.3",
    "pyrootutils==1.0.4",
    "rich==14.0.0",
    "rootutils>=1.0.7",
    "scikit-learn>=1.7.2",
    "scipy==1.15.2",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch==0.5.0",
    "timm==1.0.15",
    "torch==2.6.0",
    "torchmetrics==1.7.1",
    "torchsummary==1.5.1",
    "transformers==4.51.3",
    "wandb>=0.23.0",
    "xarray==2023.10.1",
    "xbatcher==0.4.0",
    "zarr==2.16.1",
]
